--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "prettus/l5-repository": "^2.6"
+        "prettus/l5-repository": "^2.6",
+        "jeroennoten/laravel-adminlte": "^1.15"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
