--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "prettus/l5-repository": "^2.6",
-        "jeroennoten/laravel-adminlte": "^1.15"
+        "jeroennoten/laravel-adminlte": "^1.15",
+        "nwidart/db-exporter": "^1.1",
+        "league/fractal": "^0.14.0",
+        "yangyifan/upload": "dev-master"
 
     },
     "require-dev": {
@@ -19,13 +22,14 @@
         "symfony/dom-crawler": "3.1.*",
         "barryvdh/laravel-ide-helper": "^2.2",
         "barryvdh/laravel-debugbar": "^2.3"
+
     },
     "autoload": {
         "classmap": [
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "app\\": "app/"
         }
     },
     "autoload-dev": {
