--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,20 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "ikodota/laravel-discover",
+    "description": "A Laravel Backend System. It contains some basic modules such as roles,permissions,menus,logviewer,audit, settings and etc.",
+    "keywords": ["laravel", "backend", "management system"],
+    "homepage": "http://www.cnblogs.com/ikodota",
     "license": "MIT",
     "type": "project",
+    "authors": [
+        {
+            "name": "ikodota",
+            "email": "ikodota@icloud.com"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/ikodota/larave-discover/issues",
+        "source": "https://github.com/ikodota/larave-discover"
+    },
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
