--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "5.3.*",
         "prettus/l5-repository": "^2.6",
         "league/fractal": "^0.14.0",
+        "yangyifan/upload": "dev-master",
         "owen-it/laravel-auditing":"^3.1",
         "rap2hpoutre/laravel-log-viewer": "^0.7.0"
     },
